--- a/menu.html
+++ b/menu.html
@@ -3,4 +3,4 @@ Facebook <font color="#777"> <!-- <a href="esp-story-caregiver.html">Spanish</a>
 <a href="eng-template-provider.html">Provider</a> | <a href="eng-template-lifestyle.html">Lifestyle</a>
 <img style="float: right; margin: -15px 15px 0px 0px;" src="Hey_Logo_wTag-Lg.svg" height="88" width="126" alt="Hey logo" srcset="Hey_Logo_wTag-Lg.svg" /></font></p>
 <p>&nbsp;  </p>
-
+<p>&nbsp;  </p>
