--- a/menu.html
+++ b/menu.html
@@ -1,6 +1,6 @@
 <p>Optum Provider Partnership <br />
 Facebook <font color="#777"> <!-- <a href="esp-story-caregiver.html">Spanish</a> --> <br />
-<a href="eng-template-provider.html">Provider</a> | <a href="eng-template-lifestyle.html">Lifestyle</a>
+<a href="eng-template-provider1.html">Provider1</a> | <a href="eng-template-general1.html">General1</a> | <a href="eng-template-provider2.html">Provider2</a> | <a href="eng-template-general2.html">General2</a> | <a href="eng-template-medallion.html">Medallion</a>
 <img style="float: right; margin: -15px 15px 0px 0px;" src="Hey_Logo_wTag-Lg.svg" height="88" width="126" alt="Hey logo" srcset="Hey_Logo_wTag-Lg.svg" /></font></p>
 <p>&nbsp;  </p>
 <p>&nbsp;  </p>
