--- a/eng-template-medallion.html
+++ b/eng-template-medallion.html
@@ -62,9 +62,9 @@ includeHTML();
 <hr />
 
 <div>	
-	<p>Template - General1</p>
+	<p>Template - Medallion</p>
 <video width="540" height="540" controls>
-  <source src="OPT454_FB_video_AME/OPT454_General1_1080x1080.mp4" type="video/mp4">
+  <source src="OPT454_FB_video_AME/OPT454_Medallion_1080x1080.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <p></p>
