--- a/menu-ocs.html
+++ b/menu-ocs.html
@@ -7,9 +7,9 @@ Providers <a href="eng-prov-ladt.html">LA</a> | <a href="eng-prov-longbea.html">
 	
 <img style="float: right; margin: -15px 15px 0px 0px;" src="Hey_Logo_wTag-Lg.svg" height="88" width="126" alt="Hey logo" srcset="Hey_Logo_wTag-Lg.svg" /></font>
 	<br /><br />
-Orange County - North
+Orange County - South
 	<br /> 
-<a href="ocn-Becker.html">Becker</a> | <a href="ocn-Caluya.html">Caluya</a> |  <a href="ocn-Smith.html">Smith</a>
+<a href="ocs-Gee.html">Gee</a> | <a href="ocs-Jahroumi.html">Jahroumi</a> | <a href="ocs-Pantig.html">Pantig</a> | <a href="ocs-Patel.html">Patel</a> |  <a href="ocs-Safavi.html">Safavi</a>
 </p>
 
 <!-- 
