--- a/eng-prov-ladt.html
+++ b/eng-prov-ladt.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Approval Page</title>
-<meta http-equiv="Refresh" content="0;url=eng-template-ladt-Avanesyan.html">
+<meta http-equiv="Refresh" content="0;url=ladt-Avanesyan.html">
 </head>
 <body>
 </body>
