--- a/eng-medallion.html
+++ b/eng-medallion.html
@@ -52,7 +52,7 @@ function includeHTML() {
 
 <body>
 	
-<!-- <div w3-include-html="menu-general.html"></div> -->
+<div w3-include-html="menu-medallion.html"></div> 
 
 <script>
 includeHTML();
