--- a/sobay-Shereen.html
+++ b/sobay-Shereen.html
@@ -62,9 +62,9 @@ includeHTML();
 <hr />
 
 <div>	
-	<p>Ro - Prospecting 1</p>
+	<p>Shereen - Prospecting 1</p>
 <video width="540" height="540" controls>
-  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Ro_Prosp1.mp4" type="video/mp4">
+  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Shereen_Prosp1.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <p></p>
@@ -72,9 +72,9 @@ includeHTML();
 </div>
 	
 <div>	
-	<p>Ro - Prospecting 2</p>
+	<p>Shereen - Prospecting 2</p>
 <video width="540" height="540" controls>
-  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Ro_Prosp2.mp4" type="video/mp4">
+  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Shereen_Prosp2.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <p></p>
@@ -82,9 +82,9 @@ includeHTML();
 </div>
 	
 <div>	
-	<p>Ro - Retargeting 1</p>
+	<p>Shereen - Retargeting 1</p>
 <video width="540" height="540" controls>
-  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Ro_Retarg1.mp4" type="video/mp4">
+  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Shereen_Retarg1.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <p></p>
@@ -92,9 +92,9 @@ includeHTML();
 </div>
 	
 <div>	
-	<p>Ro - Retargeting 2</p>
+	<p>Shereen - Retargeting 2</p>
 <video width="540" height="540" controls>
-  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Ro_Retarg2.mp4" type="video/mp4">
+  <source src="OPT454_FB_Provider_AME/ProviderVideos/SoBay/SoBay_Shereen_Retarg2.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 <p></p>
