--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Approval Page</title>
-<meta http-equiv="Refresh" content="0;url=eng-template-provider1.html">
+<meta http-equiv="Refresh" content="0;url=gen-hcms.html">
 </head>
 <body>
 </body>
